Add work fiel backgroung img with effects and projects triggers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>David Aguilar</title>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" type="text/css" href="portafolio.css">
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Open+Sans+Condensed:300" rel="stylesheet">
 </head>
@@ -45,7 +46,14 @@
     </div>
     <div id="group3" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
-        <div class="title">Work</div>
+        <div class="projects-bar">
+          <span>PROJECT 1</span>
+          <span>PROJECT 2</span>
+          <span>PROJECT 3</span>
+          <span>PROJECT 4</span>
+          <span>PROJECT 5</span>
+          <span>PROJECT 6</span>
+        </div>
       </div>
     </div>
     <div id="group4" class="parallax__group">
