Add smooth scrolling feature

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
   <div class="nav-bar">
-    <span>HOME</span>
-    <span>ABOUT</span>
-    <span>WORK</span>
-    <span>CONTACT</span>
+    <a href="#group1" class="active">HOME</a>
+    <a href="#group2">ABOUT</a>
+    <a href="#group3">WORK</a>
+    <a href="#group4">CONTACT</a>
   </div>
   <div class="parallax">
     <div id="group1" class="parallax__group">
@@ -26,7 +26,7 @@
         <div class="home--text_container">
           <p class="title">DAVID AGUILAR H</p>
           <p class="description">FULL STACK WEB DEVELOPER</p>
-          <p class="career">Portfolio</p>
+          <!-- <p class="career">Portfolio</p> -->
         </div>
       </div>
     </div>
