Add mobile responsive

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="#group2">ABOUT</a>
     <a href="#group3">WORK</a>
     <a href="#group4">CONTACT</a>
+    <i class="fa fa-bars" aria-hidden="true"></i>
   </div>
   <div class="parallax">
     <div id="group1" class="parallax__group">
@@ -48,7 +49,10 @@
     <div id="group3" class="parallax__group">
       <div class="parallax__layer parallax__layer--base"></div>
       <div class="overlay close-modal"></div>
+      <div class="work-msg">
       <p class="work-title">WORK</p>
+      <p class="work-description">Estos son algunos de los proyectos en los que he trabajado recientemente</p>
+      </div>
       <div class="projects-bar">
         <span class="project-trigger" data-pro="1">EXPENSIFY</span>
         <span class="project-trigger" data-pro="2">BACHILLERATO DIGITAL</span>
@@ -115,7 +119,7 @@
           <a href="https://www.linkedin.com/in/davidaguilarh/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i>https://www.linkedin.com/in/davidaguilarh/</a>
           <a href="https://github.com/Daguilar94" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>https://github.com/Daguilar94</a>
           <address>
-            <a href="mailto:davidaguilarh.94@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>Davidaguilarh.94@gmail.com</a>.<br>
+            <a href="mailto:davidaguilarh.94@gmail.com" id="mail-link"><i class="fa fa-envelope" aria-hidden="true"></i>Davidaguilarh.94@gmail.com</a><br>
           </address>
         </div>
       </div>
