Add hamburger functionality

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <a id="nav-toggle" href="#"><span></span></a>
   <div class="nav-bar">
-    <a href="#group1" class="active">HOME</a>
-    <a href="#group2">ABOUT</a>
-    <a href="#group3">WORK</a>
-    <a href="#group4">CONTACT</a>
-    <i class="fa fa-bars" aria-hidden="true"></i>
+    <a href="#group1" class="active scroll-item">HOME</a>
+    <a href="#group2" class="scroll-item">ABOUT</a>
+    <a href="#group3" class="scroll-item">WORK</a>
+    <a href="#group4" class="scroll-item">CONTACT</a>
   </div>
   <div class="parallax">
     <div id="group1" class="parallax__group">
