Improve responsive design and fill About-me and Work text content, additionally, add links to the projects in works

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
         <div class="about--text_container">
           <p class="title">ABOUT ME</p>
           <p class="description">
-            I am a creative person who seeks new challenges and personal improvement. My biggest interests are software development, clean energy, automation and sustainability, as I am very passionate about the environmental care. Based in my career and my work experience, I am looking forward to venture myself to new experiences, specially to international ones, so I can make a contribution from my academic knowledge and at the same time enrich myself personally, since I relate easily with people and I am open-minded to other cultures.
+            I am a colombian passionate Web developer who loves new challenges and innovative ideas. Programming has been one of the things that i've liked to do the most in my life since i was very young, i have always been amazed by all the creative projects that one can achieve in this field, and i think that i am here to do do something great with this, or at least that is what i found while i was doing my undergraduate in mechanical engineering.
+            <br>
+            Beyond my academic career, i like to do other things too, like running, dancing and traveling. Exercise is part of my life, i try to run everyday to beat my scores.
+            <br>
+            I consider myself an open minded person that is always looking forward for academic and personal improvment that's why my goal is to reach a balance between my academical and personal sides by not keeping locked in a routine; i can achieve that by traveling to new places and meeting new people, that helps me to be happy and keep a flexible mind to make solid relationships and think about creative ideas.
           </p>
         </div>
         <div class="about--img_container">
@@ -50,8 +54,8 @@
       <div class="parallax__layer parallax__layer--base"></div>
       <div class="overlay close-modal"></div>
       <div class="work-msg">
-      <p class="work-title">WORK</p>
-      <p class="work-description">Estos son algunos de los proyectos en los que he trabajado recientemente</p>
+        <p class="work-title">WORK</p>
+        <p class="work-description">Estos son algunos de los proyectos en los que he trabajado recientemente</p>
       </div>
       <div class="projects-bar">
         <span class="project-trigger" data-pro="1">EXPENSIFY</span>
@@ -63,50 +67,60 @@
 
       <div class="modal margin-0-auto hide" data-pro="1">
         <div class="title-line"><span class="title">EXPENSIFY</span></div>
-        <div class="project-container">
-          <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quos vitae dicta harum quae et officia ad nihil. Quia officia quae maxime atque reprehenderit cumque vero necessitatibus provident harum nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum dolor id nihil quo, nostrum ea minima repellat facilis odit repudiandae enim error nam eos, veritatis expedita sit exercitationem maiores autem.</p>
+        <div class="project-container margin-0-auto">
+          <p class="project-description">Is a web application that allows to keep an expenses control according to some tags like category, type and date. This application also gives you a dashboard where you can see a relation between your expenses in the time, it does all the expenses actions asynchronously via Ajax and additionaly it has a RESTful API where all the CRUD functionalities are implemented. This aplication was developed un Ruby on Rails using Postgress for the database.</p>
           <div class="margin-auto project-img">
-            <img src="./images/project-1.png" alt="" class="fit-img">
+            <a href="https://my-expenses-manager.herokuapp.com/" target="_blank">
+              <img src="./images/project-1.png" alt="" class="fit-img">
+            </a>
           </div>
         </div>
       </div>
 
       <div class="modal margin-0-auto hide" data-pro="2">
         <div class="title-line"><span class="title">BACHILLERATO DIGITAL</span></div>
-        <div class="project-container">
-          <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quos vitae dicta harum quae et officia ad nihil. Quia officia quae maxime atque reprehenderit cumque vero necessitatibus provident harum nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum dolor id nihil quo, nostrum ea minima repellat facilis odit repudiandae enim error nam eos, veritatis expedita sit exercitationem maiores autem.</p>
+        <div class="project-container margin-0-auto">
+          <p class="project-description">This is a digital online high-school platform held out by the government of Antioquia. The platform was planned as a social project in which the people with few academical and educational resources could study their high-school. I was a member in the front end team where we brought all the courses asynchronously using HTML, CSS and Javascript with JQuery.</p>
           <div class="margin-auto project-img">
-            <img src="./images/project-2.png" alt="" class="fit-img">
+            <a href="https://www.bdantioquia.edu.co/" target="_blank">
+              <img src="./images/project-2.png" alt="" class="fit-img">
+            </a>
           </div>
         </div>
       </div>
 
       <div class="modal margin-0-auto hide" data-pro="3">
         <div class="title-line"><span class="title">C4 SECURITY PLATFORM</span></div>
-        <div class="project-container">
-          <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quos vitae dicta harum quae et officia ad nihil. Quia officia quae maxime atque reprehenderit cumque vero necessitatibus provident harum nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum dolor id nihil quo, nostrum ea minima repellat facilis odit repudiandae enim error nam eos, veritatis expedita sit exercitationem maiores autem.</p>
+        <div class="project-container margin-0-auto">
+          <p class="project-description">This is a project developed for the GAULA (Unified Action Groups for Personal Freedom), it is a digital platform where people are taught how to act in different situations like telephone extortions, how to behave with pets, how to act with elderly people, among others. This project was developed in Wordpress and i was in charge of the front end and the handling of the framework's plug-ins with other 3 developers.</p>
           <div class="margin-auto project-img">
-            <img src="./images/project-3.png" alt="" class="fit-img">
+            <a href="http://c4.cid.edu.co/" target="_blank">
+              <img src="./images/project-3.png" alt="" class="fit-img">
+            </a>
           </div>
         </div>
       </div>
 
       <div class="modal margin-0-auto hide" data-pro="4">
         <div class="title-line"><span class="title">BLOG-POST</span></div>
-        <div class="project-container">
-          <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quos vitae dicta harum quae et officia ad nihil. Quia officia quae maxime atque reprehenderit cumque vero necessitatibus provident harum nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum dolor id nihil quo, nostrum ea minima repellat facilis odit repudiandae enim error nam eos, veritatis expedita sit exercitationem maiores autem.</p>
+        <div class="project-container margin-0-auto">
+          <p class="project-description">This is a blog-post web aplication in which it is implemented the authentication, validations and markdown functionalities. I developed this project with ruby on rails using Divise for the authentication and Postgress for the database.</p>
           <div class="margin-auto project-img">
-            <img src="./images/project-4.png" alt="" class="fit-img">
+            <a href="https://daguilarsuperblog.herokuapp.com/posts" target="_blank">
+              <img src="./images/project-4.png" alt="" class="fit-img">
+            </a>
           </div>
         </div>
       </div>
 
       <div class="modal margin-0-auto hide" data-pro="5">
-        <div class="title-line"><span class="title">GUESS THE NUMBER GAME</span></div>
-        <div class="project-container">
-          <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quos vitae dicta harum quae et officia ad nihil. Quia officia quae maxime atque reprehenderit cumque vero necessitatibus provident harum nostrum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum dolor id nihil quo, nostrum ea minima repellat facilis odit repudiandae enim error nam eos, veritatis expedita sit exercitationem maiores autem.</p>
+        <div class="title-line"><span class="title">BULLS AND COWS GAME</span></div>
+        <div class="project-container margin-0-auto">
+          <p class="project-description">This game consists in guessing a 4 digit number on several tries, every digit of the number must be different and the program is constantly giving you feedback of how many digits are right but in wrong position and how many are right and in the correct position.</p>
           <div class="margin-auto project-img">
-            <img src="./images/project-5.png" alt="" class="fit-img">
+            <a href="https://daguilar94.github.io/picas_y_fijas/" target="_blank">
+              <img src="./images/project-5.png" alt="" class="fit-img">
+            </a>
           </div>
         </div>
       </div>
