[Add] drafting technique fixings

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div class="about--text_container">
           <p class="title">ABOUT ME</p>
           <p class="description">
-            I am a colombian passionate Web developer who loves new challenges and innovative ideas. Programming has been one of the things that i've liked to do the most in my life since i was very young, i have always been amazed by all the creative projects that one can achieve in this field, and i think that i am here to do do something great with this, or at least that is what i found while i was doing my undergraduate in mechanical engineering.
+            I am a colombian passionate Web developer who loves new challenges and innovative ideas. Programming has been one of the things that I've liked to do the most in my life since I was very young, I have always been amazed by all the creative projects that one can achieve in this field, and I think that I am here to do something great with this, or at least that is what I found while I was doing my undergraduate in mechanical engineering.
             <br>
-            Beyond my academic career, i like to do other things too, like running, dancing and traveling. Exercise is part of my life, i try to run everyday to beat my scores.
+            Beyond my academic career, I like to do other things too, like running, dancing and traveling. Exercise is part of my life, I try to run everyday to beat my scores.
             <br>
-            I consider myself an open minded person that is always looking forward for academic and personal improvment that's why my goal is to reach a balance between my academical and personal sides by not keeping locked in a routine; i can achieve that by traveling to new places and meeting new people, that helps me to be happy and keep a flexible mind to make solid relationships and think about creative ideas.
+            I consider myself an open minded person that is always looking forward for academic and personal improvment that's why my goal is to reach a balance between these two parts of my life by not keeping locked in a routine; I can achieve that by traveling to new places and meeting new people, that helps me to be happy and keep a flexible mind to make solid relationships and think about creative ideas.
           </p>
         </div>
         <div class="about--img_container">
@@ -55,7 +55,7 @@
       <div class="overlay close-modal"></div>
       <div class="work-msg">
         <p class="work-title">WORK</p>
-        <p class="work-description">Estos son algunos de los proyectos en los que he trabajado recientemente</p>
+        <p class="work-description">These are some of the projects in which i've been working on lately</p>
       </div>
       <div class="projects-bar">
         <span class="project-trigger" data-pro="1">EXPENSIFY</span>
@@ -104,7 +104,7 @@
       <div class="modal margin-0-auto hide" data-pro="4">
         <div class="title-line"><span class="title">BLOG-POST</span></div>
         <div class="project-container margin-0-auto">
-          <p class="project-description">This is a blog-post web aplication in which it is implemented the authentication, validations and markdown functionalities. I developed this project with ruby on rails using Divise for the authentication and Postgress for the database.</p>
+          <p class="project-description">This is a blog-post web aplication in which it is implemented the authentication, validations and markdown functionalities. This project was developed in ruby on rails, using Divise for the authentication and Postgress for the database.</p>
           <div class="margin-auto project-img">
             <a href="https://daguilarsuperblog.herokuapp.com/posts" target="_blank">
               <img src="./images/project-4.png" alt="" class="fit-img">
