Fix capital I personal pronoun

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="overlay close-modal"></div>
       <div class="work-msg">
         <p class="work-title">WORK</p>
-        <p class="work-description">These are some of the projects in which i've been working on lately</p>
+        <p class="work-description">These are some of the projects in which I've been working on lately</p>
       </div>
       <div class="projects-bar">
         <span class="project-trigger" data-pro="1">EXPENSIFY</span>
