Fix links with section names

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
   <a id="nav-toggle" href="#"><span></span></a>
   <div class="nav-bar">
-    <a href="#group1" class="active scroll-item">HOME</a>
-    <a href="#group2" class="scroll-item">ABOUT</a>
-    <a href="#group3" class="scroll-item">WORK</a>
-    <a href="#group4" class="scroll-item">CONTACT</a>
+    <a href="#home" class="active scroll-item">HOME</a>
+    <a href="#about" class="scroll-item">ABOUT</a>
+    <a href="#work" class="scroll-item">WORK</a>
+    <a href="#contact" class="scroll-item">CONTACT</a>
   </div>
   <div class="parallax">
-    <div id="group1" class="parallax__group">
+    <div id="home" class="parallax__group">
       <div class="parallax__layer parallax__layer--back">
 
       </div>
@@ -31,7 +31,7 @@
         </div>
       </div>
     </div>
-    <div id="group2" class="parallax__group">
+    <div id="about" class="parallax__group">
       <div class="parallax__layer parallax__layer--base about--container">
         <div class="about--text_container">
           <p class="title">ABOUT ME</p>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </div>
-    <div id="group3" class="parallax__group">
+    <div id="work" class="parallax__group">
       <div class="parallax__layer parallax__layer--base"></div>
       <div class="overlay close-modal"></div>
       <div class="work-msg">
@@ -127,7 +127,7 @@
 
     </div>
 
-    <div id="group4" class="parallax__group">
+    <div id="contact" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
         <div class="contact-links">
           <a href="https://www.linkedin.com/in/davidaguilarh/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i>https://www.linkedin.com/in/davidaguilarh/</a>
