Add React blog project

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="projects-bar">
         <span class="project-trigger" data-pro="1">EXPENSIFY</span>
         <span class="project-trigger" data-pro="2">BACHILLERATO DIGITAL</span>
-        <span class="project-trigger" data-pro="3">C4 SECURITY PLATFORM</span>
+        <span class="project-trigger" data-pro="3">REACT-BLOG</span>
         <span class="project-trigger" data-pro="4">BLOG-POST</span>
         <span class="project-trigger" data-pro="5">GUESS THE NUMBER GAME</span>
       </div>
@@ -90,11 +90,11 @@
       </div>
 
       <div class="modal margin-0-auto hide" data-pro="3">
-        <div class="title-line"><span class="title">C4 SECURITY PLATFORM</span></div>
+        <div class="title-line"><span class="title">REACT-BLOG</span></div>
         <div class="project-container margin-0-auto">
-          <p class="project-description">This is a project developed for the GAULA (Unified Action Groups for Personal Freedom), it is a digital platform where people are taught how to act in different situations like telephone extortions, how to behave with pets, how to act with elderly people, among others. This project was developed in Wordpress and i was in charge of the front end and the handling of the framework's plug-ins with other 3 developers.</p>
+          <p class="project-description">This is a blog post aplication built in ReactJS post votes and display order can be managed using ReactJS only.</p>
           <div class="margin-auto project-img">
-            <a href="http://c4.cid.edu.co/" target="_blank">
+            <a href="https://daguilar94.github.io/react-blog-project/" target="_blank">
               <img src="./images/project-3.png" alt="" class="fit-img">
             </a>
           </div>
